--- a/Rent/Rent/ClientWind.xaml
+++ b/Rent/Rent/ClientWind.xaml
@@ -5,14 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rent"
         mc:Ignorable="d"
-        Title="ClientWind" Height="450" Width="800">
+        Title="ClientWind" Height="457" Width="836">
     <Grid Background="#FF252424">
-        <DataGrid x:Name="dataGridClient" Margin="0,32,0,0" Background="#FF252424">
+        <DataGrid x:Name="dataGridClient" Margin="0,32,0,10" Background="#FF252424" BorderBrush="{x:Null}" Foreground="Black" FontFamily="Century Gothic">
             <DataGrid.CellStyle>
                 <Style/>
             </DataGrid.CellStyle>
         </DataGrid>
-        <Button x:Name="btclose" Content="ЗАКРЫТЬ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="129" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Foreground="White" FontWeight="Normal" Click="btclients_Click"/>
+        <Button x:Name="BTUPD" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="175,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="31" Width="182" BorderBrush="White" FontSize="16" FontFamily="Century Gothic" Click="BTUPD_Click"/>
+        <Button x:Name="BTADD" Content="ДОБАВИТЬ КЛИЕНТА" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" FontSize="16" Height="31" Width="174" BorderBrush="White" Margin="1,1,0,0" Click="BTADD_Click_1"/>
+        <Button x:Name="BTDEL" Content="УДАЛИТЬ КЛИЕНТА" HorizontalAlignment="Left" Margin="357,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" BorderBrush="White" Height="31" Width="165" FontSize="16" FontFamily="Century Gothic" Click="Button_Click"/>
+        <Button Content="ЗАКРЫТЬ" HorizontalAlignment="Left" Margin="667,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="31" Width="168" BorderBrush="White" FontFamily="Century Gothic" FontSize="16" Click="Button_Click_1"/>
+        <Button Content="&#xD;&#xA;" HorizontalAlignment="Left" Margin="522,1,0,0" VerticalAlignment="Top" Height="31" Width="145" Background="#FF7E1EA6" BorderBrush="White"/>
 
     </Grid>
 </Window>
