--- a/Rent/Rent/RoomWind.xaml
+++ b/Rent/Rent/RoomWind.xaml
@@ -8,7 +8,7 @@
         Title="RoomWind" Height="450" Width="800">
     <Grid Background="#FF252424">
         <DataGrid x:Name="dataGridRoom" Margin="0,31,0,0"/>
-        <Button x:Name="btupdroom" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="211,0,0,0" VerticalAlignment="Top" Height="31" Width="189" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
+        <Button x:Name="btupdroom" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="211,0,0,0" VerticalAlignment="Top" Height="31" Width="189" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btupdroom_Click"/>
         <Button x:Name="btclose" Content="В МЕНЮ" HorizontalAlignment="Left" Margin="649,0,0,0" VerticalAlignment="Top" Height="31" Width="151" Foreground="White" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="btclose_Click"/>
         <Button x:Name="btdelroom" Content="УДАЛИТЬ ПОМЕЩЕНИЕ" HorizontalAlignment="Left" Margin="400,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.586,0.663" Height="31" Width="193" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btdelroom_Click"/>
         <Button Content="" HorizontalAlignment="Left" Margin="593,0,0,0" VerticalAlignment="Top" Height="31" Width="56" Foreground="White" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6"/>
