--- a/Rent/Rent/MainWindow.xaml
+++ b/Rent/Rent/MainWindow.xaml
@@ -6,10 +6,16 @@
         xmlns:local="clr-namespace:Rent"
         mc:Ignorable="d"
         Title="MainWindow" Height="445" Width="848" Background="#FF252424">
-    <Grid Margin="0,0,0,13" Background="#FF252424">
-        <Button x:Name="btclients" Content="КЛИЕНТЫ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="129" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Foreground="White" FontWeight="Normal" Click="btclients_Click" BorderBrush="#FF7E1EA6"/>
-        <Button x:Name="btexit" Content="ВЫХОД" HorizontalAlignment="Left" Margin="729,0,0,0" VerticalAlignment="Top" Height="32" Width="119" BorderBrush="White" Foreground="White" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="Button_Click"/>
-        <Button x:Name="btroom" Content="ПОМЕЩЕНИЯ" HorizontalAlignment="Left" Margin="129,0,0,0" VerticalAlignment="Top" Height="32" Width="131" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btroom_Click"/>
+    <Grid Margin="0,0,0,-6" Background="#FF252424">
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Background="#FF7E1EA6" Height="426" Width="232" Visibility="Visible" Opacity="0.5"/>
+        <Button x:Name="btexit" Content="ВЫХОД" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="64" Width="232" BorderBrush="#FF7E1EA6" Foreground="White" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="Button_Click"/>
+        <Button x:Name="btroom" Content="ПОМЕЩЕНИЯ" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top" Height="60" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btroom_Click"/>
+        <Button x:Name="btclients" Content="КЛИЕНТЫ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="58" Width="232" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Foreground="White" FontWeight="Normal" Click="btclients_Click" BorderBrush="#FF7E1EA6"/>
+        <TextBlock x:Name="datetext" HorizontalAlignment="Right" Margin="0,29,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Text="aaa" FontFamily="Century Gothic" FontSize="18"/>
+        <Label Content="Сегодняшняя дата:" HorizontalAlignment="Right" Margin="0,22,170,0" VerticalAlignment="Top" Foreground="White" FontSize="20" FontFamily="Century Gothic"/>
+        <Label Content="&quot;Все виды экономии в обществе сводятся в конечном &#xD;&#xA;счете к экономии времени&quot;&#xD;&#xA;&#xD;&#xA;                                                                      Карл Маркс" HorizontalAlignment="Right" Margin="0,0,0,29" VerticalAlignment="Bottom" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
+        <Button x:Name="btagreement" Content="СПИСОК ДОГОВОРОВ" HorizontalAlignment="Left" Margin="0,118,0,0" VerticalAlignment="Top" Height="67" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontSize="16" FontFamily="Century Gothic"/>
+        <Button x:Name="btpay" Content="ПЛАТЕЖИ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="62" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" Margin="0,185,0,0" FontFamily="Century Gothic" FontSize="16"/>
 
     </Grid>
 </Window>
