--- a/Rent/Rent/AgreementWind.xaml
+++ b/Rent/Rent/AgreementWind.xaml
@@ -6,7 +6,12 @@
         xmlns:local="clr-namespace:Rent"
         mc:Ignorable="d"
         Title="AgreementWind" Height="450" Width="800">
-    <Grid>
-        <DataGrid x:Name="dataGridAgreement"/>
+    <Grid Background="#FF252424">
+        <DataGrid x:Name="dataGridAgreement" Margin="0,32,0,0"/>
+        <Button Content="&#xA;" HorizontalAlignment="Left" Margin="568,0,0,0" VerticalAlignment="Top" Height="32" Width="99" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6"/>
+        <Button x:Name="btclose" Content="НАЗАД" HorizontalAlignment="Left" Margin="667,0,0,0" VerticalAlignment="Top" Height="32" Width="133" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btclose_Click"/>
+        <Button x:Name="btaddag" Content="ДОБАВИТЬ ДОГОВОР" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="197" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
+        <Button x:Name="btupdag" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="197,0,0,0" VerticalAlignment="Top" Height="32" Width="183" Foreground="White" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16"/>
+        <Button x:Name="btdelag" Content="УДАЛИТЬ ДОГОВОР" HorizontalAlignment="Left" Margin="380,0,0,0" VerticalAlignment="Top" Height="32" Width="188" BorderBrush="#FF7E1EA6" Background="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
     </Grid>
 </Window>
