--- a/Rent/Rent/AgreementWind.xaml
+++ b/Rent/Rent/AgreementWind.xaml
@@ -10,8 +10,8 @@
         <DataGrid x:Name="dataGridAgreement" Margin="0,32,0,0"/>
         <Button Content="&#xA;" HorizontalAlignment="Left" Margin="568,0,0,0" VerticalAlignment="Top" Height="32" Width="99" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6"/>
         <Button x:Name="btclose" Content="НАЗАД" HorizontalAlignment="Left" Margin="667,0,0,0" VerticalAlignment="Top" Height="32" Width="133" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btclose_Click"/>
-        <Button x:Name="btaddag" Content="ДОБАВИТЬ ДОГОВОР" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="197" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
-        <Button x:Name="btupdag" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="197,0,0,0" VerticalAlignment="Top" Height="32" Width="183" Foreground="White" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16"/>
-        <Button x:Name="btdelag" Content="УДАЛИТЬ ДОГОВОР" HorizontalAlignment="Left" Margin="380,0,0,0" VerticalAlignment="Top" Height="32" Width="188" BorderBrush="#FF7E1EA6" Background="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
+        <Button x:Name="btaddag" Content="ДОБАВИТЬ ДОГОВОР" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="197" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btaddag_Click"/>
+        <Button x:Name="btupdag" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="197,0,0,0" VerticalAlignment="Top" Height="32" Width="183" Foreground="White" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="btupdag_Click"/>
+        <Button x:Name="btdelag" Content="УДАЛИТЬ ДОГОВОР" HorizontalAlignment="Left" Margin="380,0,0,0" VerticalAlignment="Top" Height="32" Width="188" BorderBrush="#FF7E1EA6" Background="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btdelag_Click"/>
     </Grid>
 </Window>
