--- a/Rent/Rent/MainWindow.xaml
+++ b/Rent/Rent/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rent"
         mc:Ignorable="d"
-        Title="MainWindow" Height="445" Width="848" Background="#FF252424">
-    <Grid Margin="0,0,0,-6" Background="#FF252424">
+        Title="а (lobster)" Height="445" Width="848" Background="#FF252424" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,0,0,-6" Background="#FF1C1C1C">
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Background="#FF7E1EA6" Height="426" Width="232" Visibility="Visible" Opacity="0.5"/>
         <Button x:Name="btexit" Content="ВЫХОД" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="64" Width="232" BorderBrush="#FF7E1EA6" Foreground="White" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="Button_Click"/>
         <Button x:Name="btroom" Content="ПОМЕЩЕНИЯ" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top" Height="60" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btroom_Click"/>
@@ -16,6 +16,7 @@
         <Label Content="&quot;Все виды экономии в обществе сводятся в конечном &#xD;&#xA;счете к экономии времени&quot;&#xD;&#xA;&#xD;&#xA;                                                                      Карл Маркс" HorizontalAlignment="Right" Margin="0,0,0,29" VerticalAlignment="Bottom" Foreground="White" FontFamily="Century Gothic" FontSize="16"/>
         <Button x:Name="btagreement" Content="СПИСОК ДОГОВОРОВ" HorizontalAlignment="Left" Margin="0,118,0,0" VerticalAlignment="Top" Height="67" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontSize="16" FontFamily="Century Gothic" Click="btagreement_Click"/>
         <Button x:Name="btpay" Content="ПЛАТЕЖИ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="62" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" Margin="0,185,0,0" FontFamily="Century Gothic" FontSize="16" Click="btpay_Click"/>
+        <Button x:Name="btproc" Content="АКТИВНЫЕ ДОГОВОРЫ" HorizontalAlignment="Left" Margin="0,247,0,0" VerticalAlignment="Top" Height="62" Width="232" Background="#FF7E1EA6" BorderBrush="#FF7E1EA6" Foreground="White" FontFamily="Century Gothic" FontSize="16" Click="btproc_Click"/>
 
     </Grid>
 </Window>
