--- a/Rent/Rent/ClientWind.xaml
+++ b/Rent/Rent/ClientWind.xaml
@@ -7,15 +7,16 @@
         mc:Ignorable="d"
         Title="ClientWind" Height="457" Width="836">
     <Grid Background="#FF252424">
-        <DataGrid x:Name="dataGridClient" Margin="0,32,0,10" Background="#FF252424" BorderBrush="{x:Null}" Foreground="Black" FontFamily="Century Gothic">
+        <DataGrid x:Name="dataGridClient" Margin="0,32,0,10" Background="#FF1D1D1D" BorderBrush="{x:Null}" Foreground="Black" FontFamily="Century Gothic">
             <DataGrid.CellStyle>
                 <Style/>
             </DataGrid.CellStyle>
         </DataGrid>
-        <Button x:Name="BTUPD" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="175,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="31" Width="182" BorderBrush="White" FontSize="16" FontFamily="Century Gothic" Click="BTUPD_Click"/>
-        <Button x:Name="BTADD" Content="ДОБАВИТЬ КЛИЕНТА" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" FontSize="16" Height="31" Width="174" BorderBrush="White" Margin="1,1,0,0" Click="BTADD_Click_1"/>
-        <Button Content="ЗАКРЫТЬ" HorizontalAlignment="Left" Margin="667,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="31" Width="168" BorderBrush="White" FontFamily="Century Gothic" FontSize="16" Click="btclose"/>
-        <Button Content="&#xD;&#xA;" HorizontalAlignment="Left" Margin="357,1,0,0" VerticalAlignment="Top" Height="31" Width="310" Background="#FF7E1EA6" BorderBrush="White"/>
+        <Button x:Name="BTUPD" Content="ВНЕСТИ ИЗМЕНЕНИЯ" HorizontalAlignment="Left" Margin="175,0,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="32" Width="182" BorderBrush="#FF7E1EA6" FontSize="16" FontFamily="Century Gothic" Click="BTUPD_Click"/>
+        <Button x:Name="BTADD" Content="ДОБАВИТЬ КЛИЕНТА" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" FontSize="16" Height="32" Width="174" BorderBrush="#FF7E1EA6" Margin="1,0,0,0" Click="BTADD_Click_1"/>
+        <Button Content="ЗАКРЫТЬ" HorizontalAlignment="Left" Margin="667,1,0,0" VerticalAlignment="Top" Background="#FF7E1EA6" Foreground="White" Height="31" Width="168" BorderBrush="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Click="btclose"/>
+        <Button x:Name="SearchClient" Content="ПОИСК" HorizontalAlignment="Left" Margin="357,0,0,0" VerticalAlignment="Top" Click="SearchClient_Click" Height="32" Width="151" BorderBrush="#FF7E1EA6" Background="#FF7E1EA6" FontFamily="Century Gothic" FontSize="16" Foreground="White"/>
+        <Button x:Name="reset" Content="СБРОС" HorizontalAlignment="Left" Margin="508,0,0,0" VerticalAlignment="Top" Click="reset_Click" Height="32" Width="159" BorderBrush="#FF7E1EA6" Background="#FF7E1EA6" FontSize="16" FontFamily="Century Gothic" Foreground="White"/>
 
     </Grid>
 </Window>
